# Komorebi

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aribb24.js  subtitle_renderer.html
app/src/main/cpp/: CMakeLists.txt  Makefile  aac.cpp  aac.hpp  huffman.cpp  huffman.hpp  id3conv.cpp  id3conv.hpp  maketree.cpp  native-lib.cpp  servicefilter.cpp  servicefilter.hpp  traceb24.cpp  traceb24.hpp  tsreadex.cpp  util.cpp  util.hpp
app/src/main/java/com/beeregg2001/komorebi/common/: AppStrings.kt  UrlBuilder.kt
app/src/main/java/com/beeregg2001/komorebi/di/: DatabaseModule.kt  NetworkModule.kt
app/src/main/java/com/beeregg2001/komorebi/util/: TsReadExDataSource.kt
app/src/main/java/com/beeregg2001/komorebi/viewmodel/: EpgViewModel.kt  HomeViewModel.kt  LiveMiniEpgViewModel.kt  RecordViewModel.kt  SettingsViewModel.kt
app/src/main/java/com/example/Komirebi/: ChannelListScreen_dev.kt  MainActivity.kt  MainApplication.kt  NetworkModule.kt
app/src/main/java/com/example/Komirebi/viewmodel/: ChannelViewModel.kt  EpgViewModel.kt  HomeViewModel.kt  LivePlayerViewModel.kt
app/src/main/java/com/example/Komorebi/: ChannelListScreen_dev.kt  MainActivity.kt  MainApplication.kt  NetworkModule.kt
app/src/main/java/com/example/komorebi/: ChannelListScreen_dev.kt  MainActivity.kt  MainApplication.kt  NetworkModule.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+147 files in other folders)
